--- a/outreach.html
+++ b/outreach.html
@@ -113,7 +113,7 @@
                         </div>
                         
                         
-                        <button class="btn btn-light submit-button" type="button">Submit Your Application</button>
+                        <button class="btn btn-light submit-button-ndiyenda" type="button">Submit Your Application</button>
                     </form>
                 </div>
                 <div class="col-md-8 offset-md-2 col_agreement">
@@ -200,7 +200,7 @@
     <script src="assets/js/slick.js"></script>
     <script src="assets/js/slides.js"></script>
     <script src="assets/js/agree_terms.js"></script>
-    <script src="assets/js/book-appointment.js"></script>
+    <script src="assets/js/ndiyenda.js"></script>
     <script src="assets/js/collapsible.js"></script>
     <script src="assets/js/dialog.js"></script>
 </body>
